--- a/food4kids/package.json
+++ b/food4kids/package.json
@@ -9,11 +9,13 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "bootstrap": "^4.2.1",
     "react": "^16.7.0",
+    "react-anchor-link-smooth-scroll": "^1.0.11",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
     "react-scroll-up-button": "^1.6.4",
     "react-slick": "^0.23.2",
     "reactstrap": "^7.1.0",
+    "really-smooth-scroll": "^2.1.1",
     "slick-carousel": "^1.8.1"
   },
   "scripts": {
